Redesigned entire about page. Fixed skills containers so they have no text and just logos. Removed all the busy designs and left way more white space. Did general file cleanup for multiple files

--- a/src/components/Pages/About/About.scss
+++ b/src/components/Pages/About/About.scss
@@ -3,44 +3,32 @@
 // whole page container
 #about {
   background: var(--bg);
+  height: 80vh;
+  width: 100%;
 }
 
 .about__container {
-  width: 60%;
+  width: 70%;
   margin: 0 auto;
-  margin-top: 10rem;
+  margin-top: 15rem;
   margin-bottom: 5rem;
   padding-bottom: 5rem;
-  // border-top-left-radius: 1rem;
-  // border-top-right-radius: 1rem;
-  border: 1px solid red;
-
-  // display: flex;
-  // flex-direction: row;
-  // flex-wrap: wrap;
-  // align-items: flex-start;
-  // width: auto;
-  // margin: 0 auto;
-  // @include respond-to('xl') {
-  // width: 100%;
-  // justify-content: center;
-  // padding-left: 0px;
-  // }
-  // @include respond-to('large') {
-  //   width: 95%;
-  // }
-  // @include respond-to('medium') {
-  //   height: auto;
-  // }
+  text-align: center;
 }
-// picture and cv download button container
 
-// .picture-cv-container {
-//   display: -webkit-box;
-//   display: -ms-flexbox;
-//   display: flex;
-  
-//   width: auto;
+.about__container h1 {
+  font-family: "Lora", serif;
+  font-size: 3.2rem;
+  position: relative;
+}
+.about__container h2 {
+  font-size: 3rem;
+  font-weight: 100;
+  line-height: 3rem;
+}
+
+// .about__container h1:nth-child(3) {
+//   top: 2rem;
 // }
 
 .about__profile {
@@ -53,7 +41,6 @@
   }
 }
 .about__name {
-  // background: var(--primary);
   color: var(--primary);
   font-size: 5rem;
   font-weight: bold;
@@ -62,65 +49,15 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  // border-top-left-radius: 1rem;
-  // border-top-right-radius: 1rem;
   & img {
     margin-right: 50px;
   }
 }
 
-.about__description-container {
-  width: 90%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  // border-radius: 20px;
-  transition: 0.2s ease-in-out;
-  // @include respond-to('xxl') {
-  //   width: 700px;
-  // }
-  // @include respond-to('large') {
-  //   text-align: center;
-  //   margin-left: 0px;
-  // }
-  // @include respond-to('mobile') {
-  //   width: 100%;
-  // }
-}
-
-// .description-container-current-projects li {
-//   margin-left: 50px;
-//   font-size: 20px;
-//   font-size: 1.25rem;
-//   @include respond-to('xl') {
-//     list-style: none;
-//   }
-//   @include respond-to('small') {
-//     margin-left: none;
-//   }
-// }
-
-// .description-container-current-projects a {
-//   color: var(--primary);
-//   &:hover {
-//     color: var(--secondary);
-//   }
-// }
-
-.about__paragraph-container {
+.about__skills-container {
   width: 100%;
-  margin-top: 1rem;
-  height: auto;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
- @include respond-to('large') {
-   align-items: center;
-  }
+  justify-content: space-between;
 }
-.about__paragraph-container p {
-  width: 80%;
-  font-size: 1rem;
-}
+
+
