--- a/src/components/Pages/About/Skills/Skills.scss
+++ b/src/components/Pages/About/Skills/Skills.scss
@@ -1,74 +1,44 @@
 @import '../../../../_mixins.scss';
-//New skills container with frontend and backend skills sections
-.skills-display-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  width: auto;
-  height: 550px;
-  @include respond-to('medium') {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    height: auto;
-    padding-bottom: 25px;
-    margin: 0 auto;
-  }
-}
+
 // skills list container with developer skills
-.skills-title {
+.skills__title {
   background: var(--primary);
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  text-align: center;
   & h4 {
-    padding: 16px;
-    padding: 1rem;
-    color: whitesmoke;
-    font-family: 'Arvo', serif;
+    padding: 2rem;
+    color: var(--tertiary);
+    font-family: 'Roboto', sans-serif;
+    font-size: 2rem;
   }
 }
 
-.skills-container {
-  width: 49%;
+.skills__container {
+  width: 45%;
+  height: auto;
   text-align: left;
   list-style: none;
-  margin-top: 25px;
+  margin: 5rem 0 2.5rem 0;
+  padding-bottom: 2rem;
   box-shadow: 0 0.5rem 1rem #d9d9d9;
-  -webkit-transition: 0.4s ease-in-out;
-  transition: 0.4s ease-in-out;
-  @include respond-to('medium') {
-    width: auto;
-    margin-left: 2rem;
-    margin-right: 2rem;
-  }
-  @include respond-to('small') {
-    padding-bottom: 1rem;
-  }
-  & ul {
-    list-style: none;
-  }
+  border-radius: 1rem;
   & li {
-    padding-left: 16px;
-    padding-left: 1rem;
-    margin: 4px;
-    margin: 0.25rem;
-    font-size: 24px;
-    font-size: 1.5rem;
-    @include respond-to('mobile') {
-      font-size: 0.9rem;
-    }
+    padding: 1rem;
   }
 }
 
-.skill-icon {
-  width: 30px;
-  height: 30px;
-  margin-right: 16px;
-  margin-right: 1rem;
+.skills__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around; 
+}
+
+.skill__icon {
+  width: 5rem;
+  height: 5rem;
   @include respond-to('mobile') {
-    width: 20px;
-    height: 20px;
+    width: 2rem;
+    height: 2rem;
   }
 }
