--- a/src/components/Pages/Home/Home.scss
+++ b/src/components/Pages/Home/Home.scss
@@ -19,6 +19,7 @@
   flex-direction: column;
   justify-content: center;
   padding-left: 20%;
+  margin-bottom: 5rem;
 }
 
 // Need mobile version
